kubernetes/platform/database/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-db
  labels:
    app.kubernetes.io/name: platform-db
    app.kubernetes.io/part-of: edinstance-platform
    platform.edinstance.uk/component: database
